fable/test/semantic_error/function_data_type_decl_twice.f
      integer function fun(nums)
      integer fun
      end
